Update driver implementations